# VJsonl

./: .gitignore  AGENTS.md  CMakeLists.txt  ChangeLog.md  Features.md  README.md  Review.md  TODO.md  run-tests.sh
.agents/: README.md
.agents/agents/: README.md  TEMPLATE.md  qt-ui-reviewer.md
.agents/prompts/: README.md  review-ui-change.md
.agents/skills/: README.md
.agents/skills/_template/: SKILL.md
.agents/skills/todo-impl/: SKILL.md
.agents/skills/todo-impl/agents/: openai.yaml
.agents/skills/todo-new/: SKILL.md
.agents/skills/todo-new/agents/: openai.yaml
.agents/skills/vjsonl-project/: SKILL.md
.codex/agents/: README.md  TEMPLATE.md  qt-ui-reviewer.md
.codex/prompts/: review-ui-change.md
.codex/skills/_template/: SKILL.md
.codex/skills/git-commit/: SKILL.md
.codex/skills/vjsonl-project/: SKILL.md
resources/: VJson.qrc
reviews/: Review_26-jun-2026.md
sample/: sample.jsonl
src/: AppSettings.cpp  AppSettings.h  BuildInfo.cpp  BuildInfo.h  CodeFormatter.cpp  CodeFormatter.h  ConverterCsvToJsonl.cpp  ConverterCsvToJsonl.h  CsvReader.cpp  CsvReader.h  Delegates.cpp  Delegates.h  DemangleUtils.cpp  DemangleUtils.h  FileUtils.cpp  FileUtils.h  FilterUtils.cpp  FilterUtils.h  HtmlUtils.cpp  HtmlUtils.h  IconUtils.cpp  IconUtils.h  JsonSyntaxHighlighter.cpp  JsonSyntaxHighlighter.h  JsonUtils.cpp  JsonUtils.h  JsonlModel.cpp  JsonlModel.h  JsonlRecord.h  LogFilterProxyModel.cpp  LogFilterProxyModel.h  LogLevelStyle.cpp  LogLevelStyle.h  MainWindow.cpp  MainWindow.h  TableSessionManager.cpp  TableSessionManager.h  ThemeManager.cpp  ThemeManager.h  TimestampUtils.cpp  (+2 more)
src/Utils/: Demangle.cpp  Demangle.h  File.cpp  File.h  Filter.cpp  Filter.h  Html.cpp  Html.h  Icon.cpp  Icon.h  Json.cpp  Json.h  TableHeader.cpp  TableHeader.h  TextSearch.cpp  TextSearch.h  Timestamp.cpp  Timestamp.h
tests/: CMakeLists.txt  TestCsv.cpp  TestJsonlModel.cpp  TestLogFilterProxyModel.cpp  TestTableSessionManager.cpp  TestUtilities.cpp  TestUtils.cpp
